--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -47,6 +47,7 @@ padding-bottom: 10px;
 padding-left: 15px;
 padding-right: 15px;}
  
+.asideVenta{margin-top: 20px;}
 .produccion{margin: 5px;}
 .produccionCaja{display: flex;
 justify-content: space-around;
