--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -45,6 +45,12 @@ a{
     margin-right: 50px; 
     font-weight: bold} 
 
+.listaElejida:hover{
+    transform: scale(1.3);
+
+}
+
+
 .fondoCompleto{
     background-image: url(..//Imagenes/Freyrfondo\ completo.jpg);
     background-repeat:repeat;
@@ -66,6 +72,10 @@ a{
 
 .produccion{
     margin: 5px;}
+    
+
+.carta:hover{
+    transform: scale(1.1)}
 
 
 .produccionCaja{
