--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -12,7 +12,12 @@ a{
  h1{
      font-size: 50px;}
 
- h1, h2, h3, h4, h5, h6{ 
+ h1, 
+ h2, 
+ h3, 
+ h4, 
+ h5, 
+ h6{ 
      font-family: 'Cinzel Decorative', cursive;}
 
 
@@ -169,6 +174,11 @@ a{
     grid-template-columns: repeat(2,1fr);
     grid-auto-rows: 100px;
     padding: 5px;} 
+
+.carruselAdaptado{
+    transform: scale(0.9);
+    display: flex;
+    justify-content: center; }
 
 .produccionCaja{
     display: flex;
