Paso todo en scss y agrego mixit

--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -30,7 +30,8 @@
 
 .produccionCaja{
     display: flex;
-    flex-direction: column;}
+    flex-direction: column;
+}
 
 .fotoancho{
     grid-column-start:span 1 ;}
