--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -16,6 +16,126 @@ h5,
 h6 {
   font-family: 'Merriweather', serif; }
 
+/*HEADER NAV*/
+.header {
+  background-image: url(..//Imagenes/Freyrfondo.jpg);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-bottom: solid 3px #15364A; }
+
+.headerLogo {
+  display: flex;
+  justify-content: space-between; }
+
+.flexcontein {
+  display: flex;
+  justify-content: space-around;
+  flex-flow: row wrap; }
+
+.header nav ul {
+  list-style-type: none; }
+
+.header nav ul li {
+  display: inline-block;
+  margin-right: 50px;
+  font-weight: bold; }
+
+.listaElejida:hover {
+  transform: scale(1.3); }
+
+.checkbtn {
+  font-size: 30px;
+  color: #fff;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none; }
+
+#check {
+  display: none; }
+
+.fondoNuevo {
+  background: white;
+  background: linear-gradient(180deg, white 0%, #c4c4c4 100%, #ebedee 100%); }
+
+.slide, .slide img {
+  margin-top: 10px; }
+
+.slide img {
+  height: 55vh;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px; }
+
+.asideVenta {
+  margin-top: 20px; }
+
+.cajaNotas {
+  display: flex;
+  justify-content: center;
+  padding: 10px 50px 10px 50px;
+  margin: 5px; }
+
+.carta:hover {
+  transform: scale(1.1); }
+
+.produccionCaja {
+  display: flex;
+  justify-content: space-around;
+  padding: 5px 5px 5px 5px; }
+
+.nosotrosCard {
+  margin-top: 80px; }
+
+.datosContacto {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  font-size: 15px;
+  padding: 5px 20px 5px 20px; }
+
+.cajaFotosGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 250px;
+  padding: 20px;
+  gap: 5px; }
+
+.fotogrid {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: solid 5px white; }
+
+.fotoancho {
+  grid-column-start: span 2; }
+
+.formularioCuerpo {
+  margin-top: 50px; }
+
+.maps {
+  display: flex;
+  justify-content: end; }
+
+/*FOOTER*/
+/*MIXIN*/
+.contenedorFooter {
+  margin-top: 50px; }
+
+.redesSociales, .contenedorFooter, .copy {
+  display: flex;
+  justify-content: center; }
+
+.redesSociales i, .contenedorFooter i, .copy i {
+  font-size: 30px;
+  padding: 0 20px 0 20px; }
+
+.copy {
+  font-size: small;
+  color: #15364A; }
+
 @media screen and (max-width: 769px) {
   .header {
     background: none;
