--- a/scss/_seccion.scss
+++ b/scss/_seccion.scss
@@ -3,7 +3,53 @@
     justify-content: $justify;
 }
 
+.comienzoPrimero{
+    
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    border: solid 5px #15364A;
+    margin: 65px;
+    padding: 10px;
+   
 
+    .p{
+        margin: 5px;
+        padding: 10px;
+        
+    }
+}
+
+.presentacionCubo{
+    display: flex;
+    justify-content: space-around;
+    margin: 10px;
+
+    .botonElegido:hover{
+        font-weight: bold;
+    }
+
+
+
+
+    .img{
+    transform: scale(0.9);
+    margin-bottom: 20px;
+    margin-top: 0px;
+   
+}
+
+
+}
+
+.encuadreTexto{
+    padding-inline: 10px;
+   margin-top: 10px;
+   
+
+
+
+}
 
 .checkbtn{
     font-size: 30px;
