--- a/scss/_seccion.scss
+++ b/scss/_seccion.scss
@@ -79,7 +79,12 @@
     padding-right: 15px;}
  
 .asideVenta{
-    margin-top: 20px;}
+    margin-top: 20px;
+    
+
+
+}
+
 
 
 
@@ -123,9 +128,40 @@
 .fotoancho{
     grid-column-start:span 2 ;}
 
-.formularioCuerpo{margin-top: 50px;}
 
-.maps{
-    @include cuboFlex(flex, end);
+.formularioCuerpo{
+    width: 450px;
+    margin: auto;
+    background: rgba(0,0,0,0.4);
+    padding: 10px 20px;
+    box-sizing: border-box;
+    margin-top: 20px;
+    border-radius: 7px;}
+    
+
+
+    
+
+.formularioCuerpo input{
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 7px;
+    box-sizing: border-box;
+    font-size: 17px;
+
 
 }
+
+.contacto{
+
+    text-align:  center;
+    margin: 0px;
+    font-size: 30px;
+    color:black ;
+    margin-bottom: 20px;}
+
+
+
+
+.maps{
+    @include cuboFlex(flex, end);}
