--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -18,6 +18,10 @@
 }
 
 @media screen and (max-width: 640px){
+
+.form{
+    width: 100%;}
+
 .cajaFotosGrid{
     grid-template-columns: repeat(2,1fr);
     grid-auto-rows: 100px;
