--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -60,7 +60,10 @@ h6 {
 
 .encuadreTexto {
   padding-inline: 10px;
-  margin-top: 10px; }
+  margin-top: 10px;
+  padding-bottom: 80px;
+  padding-left: 65px;
+  padding-right: 65px; }
 
 .checkbtn {
   font-size: 30px;
@@ -88,7 +91,10 @@ h6 {
   padding-right: 15px; }
 
 .asideVenta {
-  margin-top: 20px; }
+  margin-top: 20px;
+  padding-bottom: 80px; }
+  .asideVenta h3 {
+    padding-left: 65px; }
 
 .cajaNotas {
   display: flex;
@@ -105,7 +111,10 @@ h6 {
   padding: 5px 5px 5px 5px; }
 
 .nosotrosCard {
-  margin-top: 80px; }
+  margin-top: 80px;
+  padding-bottom: 80px; }
+  .nosotrosCard h3 {
+    padding-left: 65px; }
 
 .datosContacto {
   display: flex;
@@ -160,7 +169,7 @@ h6 {
 /*FOOTER*/
 /*MIXIN*/
 .contenedorFooter {
-  margin-top: 50px; }
+  margin-top: 30px; }
 
 .redesSociales, .contenedorFooter, .copy {
   display: flex;
@@ -192,8 +201,8 @@ h6 {
   .form {
     width: 100%; }
   .cajaFotosGrid {
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 100px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 150px;
     padding: 5px; }
   .carruselAdaptado {
     transform: scale(0.9);
@@ -207,4 +216,23 @@ h6 {
   .videoAdaptado {
     transform: scale(0.9);
     display: flex;
-    justify-content: center; } }
+    justify-content: center; }
+  .containerCards {
+    margin-top: 10px;
+    padding-bottom: 65px;
+    padding-left: 35px;
+    padding-right: 0px; }
+  .asideVenta h3 {
+    padding-left: 50px; }
+  .nosotrosCard h3 {
+    padding-left: 20px; }
+  .encuadreTexto h3 {
+    padding-left: 50px; }
+  .maps {
+    transform: scale(0.9);
+    padding-left: 20px;
+    padding-right: 0px; }
+    .maps h2 {
+      padding-left: 90px; }
+  .encuadreTextoIndex h3 {
+    padding-left: 20px; } }
